# tauri-plugin-audio-permissions

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  rollup.config.js
android/: build.gradle.kts  tauri.plugin.json
android/src/androidTest/java/: AudioPermissionInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: AudioPermission.kt  AudioPermissionPlugin.kt  AudioRecordingService.kt  NotificationPermission.kt
android/src/test/java/: AudioPermissionUnitTest.kt
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: README.md  index.html  package.json
examples/tauri-app/src/: App.svelte  main.js
examples/tauri-app/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: AudioPermission.swift  AudioPermissionPlugin.swift  NotificationPermission.swift
ios/Tests/PluginTests/: AudioPermissionPluginTests.swift  PluginTests.swift
permissions/: default.toml  platforms.toml  sets.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: is_microphone_available.toml  is_service_running.toml  start_foreground_service.toml  stop_foreground_service.toml  update_notification.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
