[package]
name = "tauri-plugin-audio-permissions"
version = "0.1.2"
authors = [ "charlesportwoodii@erianna.com" ]
description = ""
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-audio-permissions"

[dependencies]
tauri = { version = "^2" }
serde = { version = "^1" }
serde_json = { version = "^1" }
thiserror = { version = "^2" }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "^0.2" }
cocoa = { version = "^0.26" }
block = { version = "^0.1" }

[build-dependencies]
tauri-plugin = { version = "^2", features = ["build"] }
